2007-06-27  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/SyncDialog.cs: Started the conflict resolution in the GUI.
	* Tomboy/SyncManager.cs: Handle conflict resolution in the GUI and not
	  in the sync thread.

2007-06-27  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/SyncDialog.cs: Respond to the events being sent from the
	  SyncManager to update the GUI.
	* Tomboy/SyncManager.cs: Do the synchronization on a thread so the GUI
	  doesn't lock.

2007-06-27  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/Note.cs: Remove all note tags before parsing XML in
	  LoadForeignNoteXml.  Adding and removing tags now updates a note's
	  last changed date.

2007-06-27  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/SyncManager.cs: When adding a note from the server, use
	  NoteManager.CreateWithGuid followed by Note.LoadForeignNoteXml. 
	  This allows the note XML to be verified by LoadForeignNoteXml
	  before it actually gets into Tomboy.
	* Tomboy/NoteManager.cs: Refactor NoteManager.Create* methods to allow
	  creating a new note with a specified GUID.

2007-06-27  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/SyncDialog.cs: Clear out the treeview and reset the progress
	  bar when starting a new sync.
	* Tomboy/TomboySyncClient.cs: Set the default revision to -1.

2007-06-27  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/SyncManager.cs, Tomboy/FileSystemSyncServer.cs,
	  Tomboy/Preferences.cs: Adding TransactionID guid to the lock file,
	  unique for each attempted transaction with the server.  Renaming
	  LockOwner to ClientId; note that the ClientId can be changed by the
	  user and is not guaranteed to be unique.

2007-06-27  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/Note.cs: Check for null before acting on buffer (Note may not
	  have been opened yet).

2007-06-27  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/SyncManager.cs, Tomboy/RemoteControl.cs, Tomboy/Note.cs: New